syntax = "proto3";

option php_namespace="GRPC\\Benchmark";
option go_package=".;benchmark";

service Benchmark {
    rpc FibFac(FibFacRequest) returns (FibFacResponse);
    rpc FibFacPhp(FibFacRequest) returns (FibFacResponse);
    rpc TextLen(TextLenRequest) returns (TextLenResponse);
}

message FibFacRequest {
    uint64 A = 1;
}

message FibFacResponse {
    uint64 Value = 1;
}

message TextLenRequest {
    uint64 A = 1;
}

message TextLenResponse {
    string Text = 1;
}
